<resources>

    <string name="app_name">BurritoBuilder</string>
    <string name="toggle_on">Meat</string>
    <string name="toggle_off">Veggie</string>
    <string name="radioTaco">Taco</string>
    <string name="salsa">Salsa</string>
    <string name="cheese">Cheese</string>
    <string name="sourCream">Sour Cream</string>
    <string name="guac">Guac</string>
    <string name="gluten">Gluten Free?</string>
    <string name="radioBurrito">Burrito</string>
    <string name="generateButton">Generate Burrito!</string>
    <string name="burritoBuilder">Burrito Builder</string>
    <string name="viewInWindowButton">View Restaurant in Separate Window!</string>
    <string name="burritoDetailFiller">Burrito details will be shown here.</string>
    <string-array name="locations">
        <item>The Hill</item>
        <item>29th Street</item>
        <item>Pearl Street</item>
    </string-array>

</resources>

